@@ -47,7 +47,8 @@ eZ Online Editor 5.0 extension Changelog
 * Added por-BR translation
 * Fixed #13691: Uneeded space on ezoe with IE7
 * Implemented: InlineImageIconPath[] setting for having custom icons on IsInline[<>]=image types
-* Enable TinyMCE xhtml validation to behave more like out of the box TinyMCE 
+* Enable TinyMCE xhtml validation to behave more like out of the box TinyMCE
+* Implemented support for controlling access to disabling edtior
 
 5.0.0
 * Fixed regression #13650: [header] ezoe adds a level each time it is called
